--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="html">
 <link rel="stylesheet" type="text/css" href="Assets/css/styleportfolio.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>
 			Louis Huang
@@ -10,9 +11,9 @@
 		<nav class="navigation">
 			<ul>
 
-				<li class="toppanel"><a href="index.html">About</a></li>
-				<li class="toppanel"><a href="portfolio2.html">Portfolio</a></li>
-				<li class="toppanel"><a href="contact.html">Contact</a></li>
+				<li class="toppanel"><a class="panellink" href="index.html">About</a></li>
+				<li class="toppanel"><a class="panellink" href="portfolio2.html">Portfolio</a></li>
+				<li class="toppanel"><a class="panellink" href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
