--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="html">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="Assets/css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>
