--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,9 @@
 		<nav class="navigation">
 			<ul>
 
-				<li class="toppanel"><a class="panellink" href="index.html">About</a></li>
+				<li class="toppanel"><a class="panellink" href="Index.html">About</a></li>
 				<li class="toppanel"><a class="panellink" href="portfolio2.html">Portfolio</a></li>
-				<li class="toppanel"><a class="panellink" href="contact.html">Contact</a></li>
+				<li class="toppanel"><a class="panellink" href="Contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
