--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="html">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="Assets/css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -12,9 +12,9 @@
 		<nav class="navigation">
 			<ul>
 
-				<li class="toppanel"><a href="index.html">About</a></li>
+				<li class="toppanel"><a href="Index.html">About</a></li>
 				<li class="toppanel"><a href="portfolio2.html">Portfolio</a></li>
-				<li class="toppanel"><a href="contact.html">Contact</a></li>
+				<li class="toppanel"><a href="Contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
