--- a/portfolio2.html
+++ b/portfolio2.html
@@ -31,19 +31,19 @@
 					</div> <!--portfolio title end -->
 						<div class="boxes">
 							<div class="gallery-pic1">
-							<img class="portfolio-bodyimages" src="assets/images/Lucy.jpg"/><span> Lucy Sleeping</span>
+							<img class="portfolio-bodyimages" src="Assets/images/Lucy.jpg"/><span> Lucy Sleeping</span>
 							</div>
 							<div class="gallery-pic2">
-							<img class="portfolio-bodyimages" src="assets/images/maine_Astrophotography.jpg"/><span>Astrophotography in Acadia National Park</span>
+							<img class="portfolio-bodyimages" src="Assets/images/maine_Astrophotography.jpg"/><span>Astrophotography in Acadia National Park</span>
 							</div>
 							<div class="gallery-pic3">
-							<img class="portfolio-bodyimages" src="assets/images/Maine_Ocean.jpg"/><span>Open Ocean</span>
+							<img class="portfolio-bodyimages" src="Assets/images/Maine_Ocean.jpg"/><span>Open Ocean</span>
 							</div>
 							<div class="gallery-pic4">
-							<img class="portfolio-bodyimages" src="assets/images/OBX_sunrise.jpg"/><span>Outer Banks in North Carolina</span>
+							<img class="portfolio-bodyimages" src="Assets/images/OBX_sunrise.jpg"/><span>Outer Banks in North Carolina</span>
 							</div>
 							<div class="gallery-pic">
-							<img class="portfolio-bodyimages" src="assets/images/OBX_sunset.jpg"/><span>Sunset at Outer Banks</span>
+							<img class="portfolio-bodyimages" src="Assets/images/OBX_sunset.jpg"/><span>Sunset at Outer Banks</span>
 							</div>
 								
 							</div>
@@ -74,9 +74,9 @@
 		    </div> <!-- end connect title -->
 		    <div class="panel-icons">
 		    	<ul class="sidepanal">
-					<li class="panel1"><a href="https://github.com/zlouis"><image class="panel2" src="assets/images/Githubicon.png"></image></a></li>
-					<li class="panel1"><a href="https://www.linkedin.com/in/louis-huang-93161069?trk=nav_responsive_tab_profile_pic"><image class="panel2" src="assets/images/linkdinicon.png"></image></a></li>
-					<li class="panel1"><a href="https://www.google.com"><image class="panel2" src="assets/images/stackoverflowicon.png"></image></a></li>					
+					<li class="panel1"><a href="https://github.com/zlouis"><image class="panel2" src="Assets/images/Githubicon.png"></image></a></li>
+					<li class="panel1"><a href="https://www.linkedin.com/in/louis-huang-93161069?trk=nav_responsive_tab_profile_pic"><image class="panel2" src="Assets/images/linkdinicon.png"></image></a></li>
+					<li class="panel1"><a href="https://www.google.com"><image class="panel2" src="Assets/images/stackoverflowicon.png"></image></a></li>					
 			    </ul>
 			</div> <!-- end panel icons -->
 		</div>  <!-- end connect wrap -->
